--- a/_includes/portfolio-card.html
+++ b/_includes/portfolio-card.html
@@ -1,7 +1,7 @@
 <div class="project-row">
   <div class="thumb">
     {% if item.image %}
-      <img class="project-thumbnail" src="{{ item.image }}" alt="{{ item.title }}" loading="lazy">
+      <img class="project-thumbnail project-thumb" src="{{ item.image }}" alt="{{ item.title }}" loading="lazy">
     {% endif %}
   </div>
 
