--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -42,3 +42,12 @@
 .badge {
   margin: 0.2rem;
 }
+
+// Hide feed link
+.feed-link {
+  display: none !important;
+}
+
+a[href*="feed.xml"] {
+  display: none !important;
+}
