--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -51,3 +51,11 @@
 a[href*="feed.xml"] {
   display: none !important;
 }
+
+// Make Hololens image smaller in Weill project
+figure img[src*="ar-hololens"] {
+  max-width: 400px !important;
+  height: auto !important;
+  margin: 0 auto;
+  display: block;
+}
