--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -511,22 +511,23 @@ footer .footer-custom-content {
 
 .blog-tags {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  color: #ccc;
-  font-size: 0.75rem;
+  color: #ddd;
+  font-size: 0.625rem;
   margin-bottom: 1.875rem;
-  opacity: 0.7;
+  opacity: 0.6;
+  font-weight: 300;
 }
 
 .blog-tags a {
-  color: #999;
+  color: #bbb;
   text-decoration: none;
-  padding: 0 0.3125rem;
+  padding: 0 0.25rem;
 }
 
 .blog-tags a:hover {
   border-radius: 2px;
-  color: #666;
-  background-color: #f5f5f5;
+  color: #888;
+  background-color: #f8f8f8;
 }
 
 .post-preview .blog-tags {
