--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -531,13 +531,12 @@ footer .footer-custom-content {
 }
 
 .post-preview .blog-tags {
-  margin-top: 0.3125rem;
-  margin-bottom: 0;
+  display: none;
 }
 
 @media (min-width: 768px) {
   .post-preview .blog-tags {
-    margin-top: 0.625rem;
+    display: none;
   }
 }
 
